# analise-palavras

./: README.md  pyproject.toml  request_palavras.py
data/: frequencia_caracteres.csv  frequencia_caracteres_enus.csv  palavras_ingles.csv  palavras_por_tamanho.csv  palavras_portugues.csv  palavras_portugues.txt
src/: analise_palavras.py  analise_palavras_python.py  filtra_dados.py  main.py  mostrar_dados.py  request_palavras.py
