[tool.poetry]
name = "analise-palavras"
version = "0.1.0"
description = ""
authors = ["Mateus Pinheiro <mateus.mcpa@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.49.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
